--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -235,7 +235,7 @@
   }
 }
 .animate-reveal-up {
-  animation: reveal-up .6s ease-out forwards;
+  animation: reveal-up 0.6s ease-out forwards;
 }
 
 body {
@@ -432,7 +432,12 @@ body {
 p {
   margin: 22px 0;
 }
-ol, ul {
+ol,
+ul {
   list-style: disc;
   padding-left: 24px;
+}
+
+.grecaptcha-badge {
+  display: none;
 }
